--- a/HTML Files/Landing Page.html
+++ b/HTML Files/Landing Page.html
@@ -10,8 +10,23 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav-style">
+                <div class="nav-items-left hidden-nav-section">
+                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
+                    <h2>MINDFLOW</h2>
+                </div>
+                <div class="nav-items-right">
+                    <p class="button color-settings-2 hidden-nav-section"><a href="#">Log In</a></p>
+                    <p class="button color-settings-2"><a href="#">Contact Us</a></p>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <main>
-        <section class="landing-section">
+        <section id="landing-section">
             <div class="website-overview">
                 <h1>Turn <span id="bold-text">Chaos</span> Into <span id="colored-text">CLARITY</span>,<br> <span id="underlined-text">One</span> Note At A Time.</h1>
                 <h3>With MindFlow, where productivity meets creativity.</h3>
@@ -139,48 +154,6 @@
                 <p>- MindFlow, a place dedicated to helping people create and bringing like-minded individuals together since day one.</p>
             </div>
         </section>
-
-        <nav class="navbar navbar-expland-lg bg-transparent navbar-dark sticky-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Offcanvas navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                  <form class="d-flex mt-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-        </nav>
     </main>
 
     <footer class="footer">
