--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -169,7 +169,7 @@
 
             <div class="footer-options1">
                 <ul class="list-1">
-                    <li><a href="#">About</a></li>
+                    <li><a href="/HTML Files/Landing Page.html">About</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
@@ -177,7 +177,7 @@
                     <li><a href="#">Services</a></li>
                 </ul>
                 <ul class="list-2">
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="/HTML Files/Signup Page.html">Sign Up</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Community</a></li>
                     <li><a href="#">Contribute Ideas</a></li>
