Finished the signup-login pages

--- a/HTML Files/Landing Page.html
+++ b/HTML Files/Landing Page.html
@@ -18,7 +18,7 @@
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <p class="button color-settings-2 hidden-nav-section"><a href="#">Log In</a></p>
+                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Log In</p></a>
                     <p class="button color-settings-2"><a href="#">Contact Us</a></p>
                 </div>
             </div>
@@ -177,8 +177,8 @@
                     <li><a href="#">Services</a></li>
                 </ul>
                 <ul class="list-2">
-                    <li><a href="/HTML Files/Signup Page.html">Sign Up</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="/HTML Files/Signup-Login Pages.html">Sign Up</a></li>
+                    <li><a href="/HTML Files/Signup-Login Pages.html">Log In</a></li>
                     <li><a href="#">Community</a></li>
                     <li><a href="#">Contribute Ideas</a></li>
                 </ul>
