Made things responsive

--- a/HTML Files/Signup-Login Pages.html
+++ b/HTML Files/Signup-Login Pages.html
@@ -316,6 +316,19 @@
                         </div>
                     </form>
                     <button class="button signup-button">Sign up</button>
+
+                    <div class="or-login-section">
+                        <p>OR</p>
+                        <h3>Log In</h3>
+                        <div class="underline"></div>
+                        <form class="signup-login-form">
+                            <label for="login-email">E-mail:</label>
+                            <input type="text" id="login-email" name="login-email" placeholder="Enter your email" required>
+                            <label for="login-password">Password:</label>
+                            <input type="password" id="login-password" name="login-password" placeholder="Enter your password" required>
+                            <button type="submit" class="button signup-button">Log In</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
