finished another page

--- a/HTML Files/Contact Page.html
+++ b/HTML Files/Contact Page.html
@@ -10,13 +10,112 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <div class="nav-style transparent"> <!--Modify transparent class on small displays-->
+                <div class="nav-items-left">
+                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
+                    <h2>MINDFLOW</h2>
+                </div>
+                <div class="nav-items-right">
+                    <a href="/HTML Files/Landing Page.html"><p class="button color-settings-2">About</p></a>
+                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2">Log In</p></a>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
-
+        <div class="container">
+            <div class="left-section">
+                <div class="text">
+                    <h1>We'd <span class="text-color">LOVE</span> To Hear From You!</h1>
+                </div>
+                <div class="image"></div>
+            </div>
+            <div class="right-section">
+                <div class="form-info">
+                    <h1>Contact us</h1>
+                    <div class="underline"></div>
+                    <div class="line">
+                        <div class="items">
+                            <label for="firstname">First Name:</label>
+                            <input type="text" id="firstname" name="firstname" placeholder="Enter your first name" required>
+                        </div>
+                        <div class="items">
+                            <label for="lastname">Last Name:</label>
+                            <input type="text" id="lastname" name="lastname" placeholder="Enter your last name" required>  
+                        </div>
+                    </div>
+                    <div class="line">
+                        <div class="items">
+                            <label for="email">E-mail:</label>
+                            <input type="text" id="email" name="email" placeholder="Enter your email" required>
+                        </div>
+                        <div class="items">
+                            <label for="phone-number">Phone Number:</label>
+                            <input type="text" id="phone-number" name="phone-number" placeholder="Enter your phone number" required>  
+                        </div>
+                    </div>
+                    <div class="text-box">
+                        <label for="message">Message:</label>
+                        <textarea name="message" id="message" placeholder="Enter your message"></textarea>
+                    </div>
+                    <button type="submit" class="button submit-button">Submit 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                        </svg>
+                    </button>
+                    <h6>EMAIL US</h6>
+                    <a href="mailto: 202310507@ua.edu.lb"><p>Contact.mindflowstudios@gmail.com</p></a>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <section class="footer-section1">
+            <div class="logo-text">
+                <div class="logo-section">
+                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
+                </div>
+                <div class="web-info1">
+                    <p>MindFlow empowers you to organize, collaborate, and achieve your goals effortlessly. Join our journey toward smarter productivity.</p>
+                </div>
+            </div>
+
+            <div class="footer-options1">
+                <ul class="list-1">
+                    <li><a href="/HTML Files/Landing Page.html">About</a></li>
+                    <li><a href="/HTML Files/Contact Page.html">Contact Us</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+                <ul class="list-2">
+                    <li><a href="/HTML Files/Signup Page.html">Sign Up</a></li>
+                    <li><a href="/HTML Files/Signup-Login Pages.html">Log In</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Contribute Ideas</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="footer-section2">
+            <p><a href="#">LinkedIn</a></p>
+            <p class="middle-el"><a href="mailto: 202310507@ua.edu.lb">Mindflowstudios@gmail.com</a></p>
+            <p><a href="#">Serena Zaarour</a></p>
+        </section>
+
+        <section class="footer-section3">
+            <div class="footer-img">
+                <img src="/Image Assets/Landing Page/Footer.png" alt="footer-img">
+            </div>
+        </section>
+
+        <section class="footer-section4">
+            <p>&copy; 2024 MindFlow. All rights reserved.</p>
+            <p class="middle-el1"><a href="#">Privacy Policy</a></p>
+            <p><a href="#">Terms Of Service</a></p>
+        </section>
     </footer>
 </body>
 </html>
