--- a/HTML Files/Signup-Login Pages.html
+++ b/HTML Files/Signup-Login Pages.html
@@ -17,8 +17,8 @@
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="/HTML Files/Landing Page.html"><p class="button color-settings-2">Go Back</p></a>
-                    <p class="button color-settings-2"><a href="#">Contact Us</a></p>
+                    <a href="/HTML Files/Landing Page.html"><p class="button color-settings-2">Discover</p></a>
+                    <a href="/HTML Files/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
                 </div>
             </div>
         </nav>
@@ -347,7 +347,7 @@
             <div class="footer-options1">
                 <ul class="list-1">
                     <li><a href="/HTML Files/Landing Page.html">About</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="/HTML Files/Contact Page.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li><a href="#">Support</a></li>
@@ -364,7 +364,7 @@
 
         <section class="footer-section2">
             <p><a href="#">LinkedIn</a></p>
-            <p class="middle-el"><a href="#">Mindflowstudios@gmail.com</a></p>
+            <p class="middle-el"><a href="mailto: 202310507@ua.edu.lb">Mindflowstudios@gmail.com</a></p>
             <p><a href="#">Serena Zaarour</a></p>
         </section>
 
