--- a/HTML Files/Landing Page.html
+++ b/HTML Files/Landing Page.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="nav-items-right">
                     <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Log In</p></a>
-                    <p class="button color-settings-2"><a href="#">Contact Us</a></p>
+                    <a href="/HTML Files/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
                 </div>
             </div>
         </nav>
@@ -31,7 +31,7 @@
                 <h1>Turn <span id="bold-text">Chaos</span> Into <span id="colored-text">CLARITY</span>,<br> <span id="underlined-text">One</span> Note At A Time.</h1>
                 <h3>With MindFlow, where productivity meets creativity.</h3>
                 <div class="action-buttons">
-                    <p class="button color-settings-1"><a href="#">Get Started</a></p>
+                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-1">Get Started</p></a>
                     <div class="discover">
                         <p><a href="#discover-section">Discover</a></p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
@@ -170,7 +170,7 @@
             <div class="footer-options1">
                 <ul class="list-1">
                     <li><a href="/HTML Files/Landing Page.html">About</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="/HTML Files/Contact Page.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li><a href="#">Support</a></li>
@@ -187,7 +187,7 @@
 
         <section class="footer-section2">
             <p><a href="#">LinkedIn</a></p>
-            <p class="middle-el"><a href="#">Mindflowstudios@gmail.com</a></p>
+            <p class="middle-el"><a href="mailto: 202310507@ua.edu.lb">Mindflowstudios@gmail.com</a></p>
             <p><a href="#">Serena Zaarour</a></p>
         </section>
 
