finished another page

--- a/HTML Files/Landing Page.html
+++ b/HTML Files/Landing Page.html
@@ -18,7 +18,7 @@
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Log In</p></a>
+                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Sign Up</p></a>
                     <a href="/HTML Files/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
                 </div>
             </div>
