--- a/HTML Files/Signup-Login Pages.html
+++ b/HTML Files/Signup-Login Pages.html
@@ -315,7 +315,7 @@
                             <label class="item-2" for="accept">By clicking this, you agree to our <a href="#">Privacy Policy and Terms of Service</a>.</label>
                         </div>
                     </form>
-                    <button class="button signup-button">Sign up</button>
+                    <a href="/HTML Files/User Dashboard Page.html"><button class="button signup-button">Sign up</button></a>
 
                     <div class="or-login-section">
                         <p>OR</p>
