--- a/HTML Files/User Dashboard Page.html
+++ b/HTML Files/User Dashboard Page.html
@@ -27,7 +27,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
                                 <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
                             </svg>
-                            <span class="d-none d-md-inline ms-2">Home</span>
+                            <span class="d-none d-md-inline ms-2">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -90,7 +90,7 @@
                     <div class="row-2">
                         <div class="container text-center">
                             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-                                <a href="">
+                                <a href="/HTML Files/Individual Notes Page.html">
                                     <div class="col custom-margin">
                                         <div class="card border-design">
                                             <div id="colored-bg-1"></div>
@@ -161,8 +161,6 @@
             </div>
         </main>
     </div>
-
-    <!-- Bootstrap and Popper.js scripts (optional but recommended) -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="/CSS Files/Bootstrap css/bootstrap.min.js"></script>
 </body>
