--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="/CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="/CSS Files/Landing Page.css">
-    <link rel="stylesheet" href="/CSS Files/Nav - Footer CSS.css">
+    <link rel="stylesheet" href="CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="CSS Files/Landing Page.css">
+    <link rel="stylesheet" href="CSS Files/Nav - Footer CSS.css">
     <title>Landing Page</title>
 </head>
 <body>
