--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="CSS Files/Landing Page.css">
-    <link rel="stylesheet" href="CSS Files/Nav - Footer CSS.css">
+    <link rel="stylesheet" href="./CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="./CSS Files/Landing Page.css">
+    <link rel="stylesheet" href="./CSS Files/Nav - Footer CSS.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -18,8 +18,8 @@
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Sign Up</p></a>
-                    <a href="/HTML Files/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
+                    <a href="/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Sign Up</p></a>
+                    <a href="/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
                 </div>
             </div>
         </nav>
