--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="nav-style">
                 <div class="nav-items-left hidden-nav-section">
-                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
+                    <img src="./Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
