--- a/HTML Files/Landing Page.html
+++ b/HTML Files/Landing Page.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="./CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="./CSS Files/Landing Page.css">
-    <link rel="stylesheet" href="./CSS Files/Nav - Footer CSS.css">
+    <link rel="stylesheet" href="/CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="/CSS Files/Landing Page.css">
+    <link rel="stylesheet" href="/CSS Files/Nav - Footer CSS.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -14,12 +14,12 @@
         <nav>
             <div class="nav-style">
                 <div class="nav-items-left hidden-nav-section">
-                    <img src="../Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
+                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="./Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Sign Up</p></a>
-                    <a href="./Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
+                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2 hidden-nav-section">Sign Up</p></a>
+                    <a href="/HTML Files/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
                 </div>
             </div>
         </nav>
@@ -31,7 +31,7 @@
                 <h1>Turn <span id="bold-text">Chaos</span> Into <span id="colored-text">CLARITY</span>,<br> <span id="underlined-text">One</span> Note At A Time.</h1>
                 <h3>With MindFlow, where productivity meets creativity.</h3>
                 <div class="action-buttons">
-                    <a href=",/Signup-Login Pages.html"><p class="button color-settings-1">Get Started</p></a>
+                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-1">Get Started</p></a>
                     <div class="discover">
                         <p><a href="#discover-section">Discover</a></p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
@@ -77,8 +77,8 @@
 
         <section class="features-section">
             <div class="images">
-                <img src="./Image Assets/Landing Page/squiggles - right.png" alt="squiggles" class="squiggle-display">
-                <img src="./Image Assets/Landing Page/squiggles.png" alt="squiggles" class="squiggle-display">
+                <img src="/Image Assets/Landing Page/squiggles - right.png" alt="squiggles" class="squiggle-display">
+                <img src="/Image Assets/Landing Page/squiggles.png" alt="squiggles" class="squiggle-display">
             </div>
             <div class="features-text-area">
                 <div class="features-title">
@@ -92,42 +92,42 @@
                         <ul class="mindflow-card-list swiper-wrapper">
                             <li class="mindflow-card-item swiper-slide">
                                 <a href="#" class="mindflow-card-link">
-                                    <img src="./Image Assets/Landing Page/card-icons/digital-notes.png" alt="mindflow-card-image" class="mindflow-card-image">
+                                    <img src="/Image Assets/Landing Page/card-icons/digital-notes.png" alt="mindflow-card-image" class="mindflow-card-image">
                                     <h4 class="mindflow-card-title">Digitalize Your Notes</h4>
                                     <p class="mindflow-card-info">Choose digital over paper, carry your notes everywhere with you.</p>
                                 </a>
                             </li>
                             <li class="mindflow-card-item swiper-slide">
                                 <a href="#" class="mindflow-card-link">
-                                    <img src="./Image Assets/Landing Page/card-icons/friends-collab.png" alt="mindflow-card-image" class="mindflow-card-image">
+                                    <img src="/Image Assets/Landing Page/card-icons/friends-collab.png" alt="mindflow-card-image" class="mindflow-card-image">
                                     <h4 class="mindflow-card-title">Share Your Notes</h4>
                                     <p class="mindflow-card-info">Collaborate with friends and let your ideas flow through shared notes.</p>
                                 </a>
                             </li> 
                             <li class="mindflow-card-item swiper-slide">
                                 <a href="#" class="mindflow-card-link">
-                                    <img src="./Image Assets/Landing Page/card-icons/team-work.png" alt="mindflow-card-image" class="mindflow-card-image">
+                                    <img src="/Image Assets/Landing Page/card-icons/team-work.png" alt="mindflow-card-image" class="mindflow-card-image">
                                     <h4 class="mindflow-card-title">Work In Teams</h4>
                                     <p class="mindflow-card-info">Lead and work with teams efficiently through integrated team workspaces.</p>
                                 </a>
                             </li> 
                             <li class="mindflow-card-item swiper-slide">
                                 <a href="#" class="mindflow-card-link">
-                                    <img src="./Image Assets/Landing Page/card-icons/goals.png" alt="mindflow-card-image" class="mindflow-card-image">
+                                    <img src="/Image Assets/Landing Page/card-icons/goals.png" alt="mindflow-card-image" class="mindflow-card-image">
                                     <h4 class="mindflow-card-title">Stay On Track, Always</h4>
                                     <p class="mindflow-card-info">Achieve more with clear goals and actionable task management tools.</p>
                                 </a>
                             </li> 
                             <li class="mindflow-card-item swiper-slide">
                                 <a href="#" class="mindflow-card-link">
-                                    <img src="./Image Assets/Landing Page/card-icons/friends-chat.png" alt="mindflow-card-image" class="mindflow-card-image">
+                                    <img src="/Image Assets/Landing Page/card-icons/friends-chat.png" alt="mindflow-card-image" class="mindflow-card-image">
                                     <h4 class="mindflow-card-title">Chat With Friends</h4>
                                     <p class="mindflow-card-info">Share notes with colleagues through chats and increase productivity.</p>
                                 </a>
                             </li> 
                             <li class="mindflow-card-item swiper-slide">
                                 <a href="#" class="mindflow-card-link">
-                                    <img src="./Image Assets/Landing Page/card-icons/creative.png" alt="mindflow-card-image" class="mindflow-card-image">
+                                    <img src="/Image Assets/Landing Page/card-icons/creative.png" alt="mindflow-card-image" class="mindflow-card-image">
                                     <h4 class="mindflow-card-title">Get Creative</h4>
                                     <p class="mindflow-card-info">Organise your workspace with pre-made and custom assets.</p>
                                 </a>
@@ -143,8 +143,8 @@
         <section class="journey-section">
             <div class="journey-video">
                 <video autoplay muted loop playsinline>
-                    <source src="./Video Assets/Landing Page/7652721-hd_1080_1920_25fps.mp4" type="video/mp4">
-                    <source src="./Video Assets/Landing Page/7652721-hd_1080_1920_25fps.webm" type="video/webm">
+                    <source src="/Video Assets/Landing Page/7652721-hd_1080_1920_25fps.mp4" type="video/mp4">
+                    <source src="/Video Assets/Landing Page/7652721-hd_1080_1920_25fps.webm" type="video/webm">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -160,7 +160,7 @@
         <section class="footer-section1">
             <div class="logo-text">
                 <div class="logo-section">
-                    <img src="./Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
+                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
                 </div>
                 <div class="web-info1">
                     <p>MindFlow empowers you to organize, collaborate, and achieve your goals effortlessly. Join our journey toward smarter productivity.</p>
@@ -169,16 +169,16 @@
 
             <div class="footer-options1">
                 <ul class="list-1">
-                    <li><a href="./Landing Page.html">About</a></li>
-                    <li><a href="./Contact Page.html">Contact Us</a></li>
+                    <li><a href="/HTML Files/Landing Page.html">About</a></li>
+                    <li><a href="/HTML Files/Contact Page.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li><a href="#">Support</a></li>
                     <li><a href="#">Services</a></li>
                 </ul>
                 <ul class="list-2">
-                    <li><a href="./Signup-Login Pages.html">Sign Up</a></li>
-                    <li><a href="./Signup-Login Pages.html">Log In</a></li>
+                    <li><a href="/HTML Files/Signup-Login Pages.html">Sign Up</a></li>
+                    <li><a href="/HTML Files/Signup-Login Pages.html">Log In</a></li>
                     <li><a href="#">Community</a></li>
                     <li><a href="#">Contribute Ideas</a></li>
                 </ul>
@@ -193,7 +193,7 @@
 
         <section class="footer-section3">
             <div class="footer-img">
-                <img src="./Landing Page/Footer.png" alt="footer-img">
+                <img src="/Image Assets/Landing Page/Footer.png" alt="footer-img">
             </div>
         </section>
 
@@ -205,6 +205,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="./JS Files/Landing Page.js"></script>
+    <script src="/JS Files/Landing Page.js"></script>
 </body>
 </html>
