--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS Files/Global CSS.css">
     <link rel="stylesheet" href="CSS Files/Landing Page.css">
     <link rel="stylesheet" href="CSS Files/Nav - Footer CSS.css">
-    <title>Landing Page</title>
+    <title>Discover Page</title>
 </head>
 <body>
     <header>
