--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div class="footer-options1">
                 <ul class="list-1">
-                    <li><a href="Landing Page.html">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="Contact Page.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
