contact page's turn

--- a/Contact Page.html
+++ b/Contact Page.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="/CSS Files/Nav - Footer CSS.css">
-    <link rel="stylesheet" href="/CSS Files/Contact Page.css">
+    <link rel="stylesheet" href="CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="CSS Files/Nav - Footer CSS.css">
+    <link rel="stylesheet" href="CSS Files/Contact Page.css">
     <title>Contact Us</title>
 </head>
 <body>
@@ -13,12 +13,12 @@
         <nav>
             <div class="nav-style transparent"> <!--Modify transparent class on small displays-->
                 <div class="nav-items-left">
-                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
+                    <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="/HTML Files/Landing Page.html"><p class="button color-settings-2">About</p></a>
-                    <a href="/HTML Files/Signup-Login Pages.html"><p class="button color-settings-2">Log In</p></a>
+                    <a href="HTML Files/Landing Page.html"><p class="button color-settings-2">About</p></a>
+                    <a href="HTML Files/Signup-Login Pages.html"><p class="button color-settings-2">Log In</p></a>
                 </div>
             </div>
         </nav>
@@ -74,7 +74,7 @@
         <section class="footer-section1">
             <div class="logo-text">
                 <div class="logo-section">
-                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
+                    <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
                 </div>
                 <div class="web-info1">
                     <p>MindFlow empowers you to organize, collaborate, and achieve your goals effortlessly. Join our journey toward smarter productivity.</p>
@@ -83,16 +83,16 @@
 
             <div class="footer-options1">
                 <ul class="list-1">
-                    <li><a href="/HTML Files/Landing Page.html">About</a></li>
-                    <li><a href="/HTML Files/Contact Page.html">Contact Us</a></li>
+                    <li><a href="Landing Page.html">About</a></li>
+                    <li><a href="Contact Page.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li><a href="#">Support</a></li>
                     <li><a href="#">Services</a></li>
                 </ul>
                 <ul class="list-2">
-                    <li><a href="/HTML Files/Signup Page.html">Sign Up</a></li>
-                    <li><a href="/HTML Files/Signup-Login Pages.html">Log In</a></li>
+                    <li><a href="Signup Page.html">Sign Up</a></li>
+                    <li><a href="Signup-Login Pages.html">Log In</a></li>
                     <li><a href="#">Community</a></li>
                     <li><a href="#">Contribute Ideas</a></li>
                 </ul>
@@ -107,7 +107,7 @@
 
         <section class="footer-section3">
             <div class="footer-img">
-                <img src="/Image Assets/Landing Page/Footer.png" alt="footer-img">
+                <img src="Image Assets/Landing Page/Footer.png" alt="footer-img">
             </div>
         </section>
 
