finished the contact form

--- a/Contact Page.html
+++ b/Contact Page.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div class="nav-style transparent"> <!--Modify transparent class on small displays-->
+            <div class="nav-style transparent"> 
                 <div class="nav-items-left">
                     <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
                     <h2>MINDFLOW</h2>
