started with the sign up page

--- a/Signup-Login Pages.html
+++ b/Signup-Login Pages.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="/CSS Files/Nav - Footer CSS.css">
-    <link rel="stylesheet" href="/CSS Files/Signup-Login Pages.css">
+    <link rel="stylesheet" href="CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="CSS Files/Nav - Footer CSS.css">
+    <link rel="stylesheet" href="CSS Files/Signup-Login Pages.css">
     <title>Sign Up</title>
 </head>
 <body>
@@ -13,12 +13,12 @@
         <nav>
             <div class="nav-style transparent">
                 <div class="nav-items-left">
-                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
+                    <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="nav-logo">
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="/HTML Files/Landing Page.html"><p class="button color-settings-2">Discover</p></a>
-                    <a href="/HTML Files/Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
+                    <a href="Landing Page.html"><p class="button color-settings-2">Discover</p></a>
+                    <a href="Contact Page.html"><p class="button color-settings-2">Contact Us</p></a>
                 </div>
             </div>
         </nav>
@@ -315,7 +315,7 @@
                             <label class="item-2" for="accept">By clicking this, you agree to our <a href="#">Privacy Policy and Terms of Service</a>.</label>
                         </div>
                     </form>
-                    <a href="/HTML Files/User Dashboard Page.html"><button class="button signup-button">Sign up</button></a>
+                    <a href="User Dashboard Page.html"><button class="button signup-button">Sign up</button></a>
 
                     <div class="or-login-section">
                         <p>OR</p>
@@ -337,7 +337,7 @@
         <section class="footer-section1">
             <div class="logo-text">
                 <div class="logo-section">
-                    <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
+                    <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo">
                 </div>
                 <div class="web-info1">
                     <p>MindFlow empowers you to organize, collaborate, and achieve your goals effortlessly. Join our journey toward smarter productivity.</p>
@@ -346,16 +346,16 @@
 
             <div class="footer-options1">
                 <ul class="list-1">
-                    <li><a href="/HTML Files/Landing Page.html">About</a></li>
-                    <li><a href="/HTML Files/Contact Page.html">Contact Us</a></li>
+                    <li><a href="Landing Page.html">About</a></li>
+                    <li><a href="Contact Page.html">Contact Us</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li><a href="#">Support</a></li>
                     <li><a href="#">Services</a></li>
                 </ul>
                 <ul class="list-2">
-                    <li><a href="/HTML Files/Signup Page.html">Sign Up</a></li>
-                    <li><a href="/HTML Files/Signup-Login Pages.html">Log In</a></li>
+                    <li><a href="Signup Page.html">Sign Up</a></li>
+                    <li><a href="Signup-Login Pages.html">Log In</a></li>
                     <li><a href="#">Community</a></li>
                     <li><a href="#">Contribute Ideas</a></li>
                 </ul>
@@ -370,7 +370,7 @@
 
         <section class="footer-section3">
             <div class="footer-img">
-                <img src="/Image Assets/Landing Page/Footer.png" alt="footer-img">
+                <img src="Image Assets/Landing Page/Footer.png" alt="footer-img">
             </div>
         </section>
 
@@ -380,6 +380,6 @@
             <p><a href="#">Terms Of Service</a></p>
         </section>
     </footer>
-    <script src="/JS Files/Signup-Login Pages.js"></script>
+    <script src="JS Files/Signup-Login Pages.js"></script>
 </body>
 </html>
