--- a/User Dashboard Page.html
+++ b/User Dashboard Page.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS Files/Bootstrap css/bootstrap.min.css">
-    <link rel="stylesheet" href="/CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="/CSS Files/User Dashboard Page.css">
+    <link rel="stylesheet" href="CSS Files/Bootstrap css/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="CSS Files/User Dashboard Page.css">
     <title>MindFlow Dashboard</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="sidebar-content d-flex flex-column h-100">
                 <div class="sidebar-header">
                     <a href="#" class="navbar-brand d-flex align-items-center text-white text-decoration-none">
-                        <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="logo me-2 img-1">
+                        <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="logo me-2 img-1">
                         <span class="d-none d-md-inline fs-5">Serena's Workspace</span>
                     </a>
                 </div>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link custom-display">
-                            <img src="/Image Assets/User Profile Pics/dummy-pfp.jpg" alt="pfp" class="profile-pic me-2 img-2">
+                            <img src="Image Assets/User Profile Pics/dummy-pfp.jpg" alt="pfp" class="profile-pic me-2 img-2">
                             <span class="d-none d-md-inline">Profile</span>
                         </a>
                     </li>
@@ -90,7 +90,7 @@
                     <div class="row-2">
                         <div class="container text-center">
                             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-                                <a href="/HTML Files/Individual Notes Page.html">
+                                <a href="Individual Notes Page.html">
                                     <div class="col custom-margin">
                                         <div class="card border-design">
                                             <div id="colored-bg-1"></div>
@@ -162,6 +162,6 @@
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="/CSS Files/Bootstrap css/bootstrap.min.js"></script>
+    <script src="CSS Files/Bootstrap css/bootstrap.min.js"></script>
 </body>
 </html>
