--- a/Contact Page.html
+++ b/Contact Page.html
@@ -17,8 +17,8 @@
                     <h2>MINDFLOW</h2>
                 </div>
                 <div class="nav-items-right">
-                    <a href="HTML Files/Landing Page.html"><p class="button color-settings-2">About</p></a>
-                    <a href="HTML Files/Signup-Login Pages.html"><p class="button color-settings-2">Log In</p></a>
+                    <a href="Landing Page.html"><p class="button color-settings-2">About</p></a>
+                    <a href="Signup-Login Pages.html"><p class="button color-settings-2">Log In</p></a>
                 </div>
             </div>
         </nav>
