--- a/Individual Notes Page.html
+++ b/Individual Notes Page.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS Files/Bootstrap css/bootstrap.min.css">
-    <link rel="stylesheet" href="/CSS Files/Global CSS.css">
-    <link rel="stylesheet" href="/CSS Files/Indiviual Notes Page.css">
+    <link rel="stylesheet" href="CSS Files/Bootstrap css/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS Files/Global CSS.css">
+    <link rel="stylesheet" href="CSS Files/Indiviual Notes Page.css">
     <title>WEB DESIGN</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="sidebar-content d-flex flex-column h-100">
                 <div class="sidebar-header">
                     <a href="#" class="navbar-brand d-flex align-items-center text-white text-decoration-none">
-                        <img src="/Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="logo me-2 img-1">
+                        <img src="Image Assets/MindFlow Logos/MindFlow Logo - 2 - Beige.png" alt="logo" class="logo me-2 img-1">
                         <span class="d-none d-md-inline fs-5">Serena's Workspace</span>
                     </a>
                 </div>
@@ -85,7 +85,7 @@
                 
                 <ul class="nav nav-pills flex-column mt-auto pb-3">
                     <li class="nav-item">
-                        <a href="/HTML Files/User Dashboard Page.html" class="nav-link custom-display">
+                        <a href="User Dashboard Page.html" class="nav-link custom-display">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z"/>
                                 <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708z"/>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link custom-display">
-                            <img src="/Image Assets/User Profile Pics/dummy-pfp.jpg" alt="pfp" class="profile-pic me-2 img-2">
+                            <img src="Image Assets/User Profile Pics/dummy-pfp.jpg" alt="pfp" class="profile-pic me-2 img-2">
                             <span class="d-none d-md-inline">Profile</span>
                         </a>
                     </li>
